# Stridert

./: Cargo.toml
src/: config.rs  main.rs  stridert.rs
src/entity/: entity.rs  mod.rs  player.rs  property.rs
src/inventory/: item.rs  itemstack.rs  mod.rs  recipe.rs
src/network/: connection.rs  mod.rs  packet_listener.rs  states.rs  tcp_listener.rs
src/network/packets/: clientbounddeclarecommandspacket.rs  clientbounddeclarerecipespacket.rs  clientboundentitystatuspacket.rs  clientboundhelditemchangepacket.rs  clientboundjoingamepacket.rs  clientboundlogindisconnectpacket.rs  clientboundloginsuccesspacket.rs  clientboundplayerabilitiespacket.rs  clientboundplayerinfopacket.rs  clientboundplayerpositionandlookpacket.rs  clientboundpluginmessagepacket.rs  clientboundresponsepacket.rs  clientboundserverdifficultypacket.rs  clientboundtagspacket.rs  clientboundunlockrecipespacket.rs  clientboundupdatelightpacket.rs  clientboundupdateviewpositionpacket.rs  friendlybytebuf.rs  mod.rs  packet.rs  serverboundclientsettingspacket.rs  serverboundhandshakepacket.rs  serverboundloginstartpacket.rs  serverboundpluginmessagepacket.rs  serverboundrequestpacket.rs
src/registry/: blocks.rs  chatmodes.rs  difficulties.rs  dimensions.rs  entitystatuses.rs  entitytypes.rs  fluids.rs  gamemode.rs  gamemodes.rs  hands.rs  identifier.rs  items.rs  leveltypes.rs  mod.rs  recipes.rs  recipetypes.rs
src/util/: mod.rs  uuid.rs  var.rs
src/world/: block.rs  chunk.rs  world.rs
