[package]
name = "stridert"
version = "0.1.0"
authors = ["Iaiao <err266228@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.49", features = [ "derive" ] }
serde_json = "1.0.49"
base64 = "0.4.0"
sha2 = "0.8.1"
rand = "0.7.3"
lazy_static = "1.4.0"
reqwest = { version = "0.10.4", features = [ "blocking", "json" ] }